@@ -1,3 +1,8 @@
+2003-08-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/kernel-features.h: Define
+	__ASSUME_CLONE_STOPPED.
+
 2003-08-01  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/generic/bits/libc-lock.h
